<resources>
    <string name="app_name">Easy Quick Settings</string>


    <!-- For Ads -->
    <string name="ad_mob_app_id">ca-app-pub-8677665109043809~1138777225</string>
    <!--<string name="ad_mob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->

    <string name="eu_consent_title">We care about your privacy &amp; data security.We keep this app free by showing ads.</string>
    <string name="eu_consent_text">You can change your choice anytime for App in the app settings.Our partners collect data and use a unique identifier on your device to show you ads.</string>
    <string name="eu_consent_question">Can we continue to use yor data to tailor ads for you?</string>
    <string name="learn_more">Privacy &amp; Policy\nHow App &amp; our partners uses your data!</string>
    <string name="eu_consent_yes">Yes, Continue</string>
    <string name="eu_consent_no">No, see the ads that are less irrelevant</string>
    <string name="eu_consent_change_setting">You can change this setting anytime in the \"About\" window.</string>
    <string name="action_remove_ads">Pay for the ad-free Version</string>

    <string name="lbl_header_settings">Settings</string>
    <string name="version_name">Version</string>
    <string name="ad_free">Pay for Ad-Free Version</string>
    <string name="user_consent">AdMob Consent</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy">Privacy &amp; Policy</string>
    <string name="license">License</string>
</resources>