<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:id="@+id/ll_eu_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/eu_dialog_img_app_icon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/eu_dialog_txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/eu_dialog_margin_left"
                android:layout_marginRight="@dimen/eu_dialog_margin_right"
                android:layout_toRightOf="@+id/eu_dialog_img_app_icon"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/consent_material_blue"
                android:textSize="@dimen/_13sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/eu_dialog_txt_care"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eu_dialog_margin_left"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/eu_dialog_margin_right"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/eu_consent_title"
            android:textAllCaps="false"
            android:textColor="@color/consent_text_color"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/eu_dialog_txt_ask_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/eu_dialog_margin_left"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/eu_dialog_margin_right"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/eu_consent_question"
            android:textAllCaps="false"
            android:textColor="@color/consent_material_blue"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/eu_dialog_txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eu_dialog_margin_left"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/eu_dialog_margin_right"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/eu_consent_text"
            android:textAllCaps="false"
            android:textColor="@color/consent_text_color"
            android:textSize="@dimen/_10sdp" />

        <RelativeLayout
            android:id="@+id/eu_dialog_rel_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eu_dialog_button_height"
            android:layout_marginLeft="@dimen/eu_dialog_button_margin_left"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/eu_dialog_button_margin_right"
            android:background="@drawable/consent_button_selector">

            <TextView
                android:id="@+id/eu_dialog_lbl_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/eu_consent_yes"
                android:textAllCaps="false"
                android:textColor="@color/consent_material_blue"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eu_dialog_rel_irrelevant"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eu_dialog_button_height"
            android:layout_marginLeft="@dimen/eu_dialog_button_margin_left"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/eu_dialog_button_margin_right"
            android:background="@drawable/consent_button_selector"
            android:visibility="gone">

            <TextView
                android:id="@+id/eu_dialog_lbl_irrelevant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/eu_consent_no"
                android:textAllCaps="false"
                android:textColor="@color/consent_material_blue"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eu_dialog_rel_remove_ads"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eu_dialog_button_height"
            android:layout_marginLeft="@dimen/eu_dialog_button_margin_left"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/eu_dialog_button_margin_right"
            android:background="@drawable/consent_button_selector">

            <TextView
                android:id="@+id/eu_dialog_lbl_remove_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/action_remove_ads"
                android:textAllCaps="false"
                android:textColor="@color/consent_material_blue"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eu_dialog_rel_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eu_dialog_button_height"
            android:layout_marginLeft="@dimen/eu_dialog_button_margin_left"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/eu_dialog_button_margin_right"
            android:background="@drawable/consent_button_selector"
            android:visibility="visible">

            <TextView
                android:id="@+id/eu_dialog_lbl_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:text="Exit"
                android:textAllCaps="false"
                android:textColor="@color/consent_material_blue"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/eu_dialog_lbl_learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/eu_dialog_margin_left"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/eu_dialog_margin_right"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/learn_more"
            android:textColor="@drawable/dialog_button_text_selector"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />
    </LinearLayout>
</ScrollView>