<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout android:id="@+id/info_rel_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/transparent">

        <TextView android:id="@+id/info_lbl_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:lines="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lbl_header_settings"
            android:textColor="@color/setting_header_text_color"
            android:textSize="@dimen/_17sdp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/info_rel_header"
        android:layout_above="@+id/ad_layout"
        android:layout_marginBottom="@dimen/ad_margin_below">

        <RelativeLayout
            android:id="@+id/setting_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/setting_other_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/setting_rel_version"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:gravity="center_vertical"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:gravity="center_vertical|center_horizontal"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/version_name"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />

                    <TextView
                        android:id="@+id/setting_txt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/setting_text_margin_left"
                        android:gravity="center_vertical|center_horizontal"
                        android:fontFamily="@font/roboto_bold"
                        android:text="1.0"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_version"
                    android:background="@color/setting_view_color"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_ad_free"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_0"
                    android:gravity="center_vertical"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_ad_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/ad_free"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_ad_free"
                    android:background="@color/setting_view_color"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_user_consent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_1"
                    android:background="@drawable/setting_rel_selector"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/setting_lbl_user_consent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/user_consent"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_user_consent"
                    android:background="@color/setting_view_color"
                    android:visibility="visible"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_share_app"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_3"
                    android:gravity="center_vertical"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_share_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/share_app"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_share_app"
                    android:background="@color/setting_view_color"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_rate_us"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_4"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_rate_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/rate_us"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_rate_us"
                    android:background="@color/setting_view_color"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_5"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/privacy"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>

                <View android:id="@+id/setting_view_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_view_height"
                    android:layout_below="@+id/setting_rel_privacy"
                    android:background="@color/setting_view_color"/>

                <RelativeLayout
                    android:id="@+id/setting_rel_license"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_rel_height"
                    android:layout_below="@+id/setting_view_6"
                    android:background="@drawable/setting_rel_selector">

                    <TextView
                        android:id="@+id/setting_lbl_license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/setting_text_margin_left"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/license"
                        android:textColor="@color/setting_text_color_title"
                        android:textSize="@dimen/setting_text_size_title" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/ad_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ad_native_height"
        android:layout_marginLeft="@dimen/ad_side_margin"
        android:layout_marginRight="@dimen/ad_side_margin"
        android:layout_marginBottom="@dimen/ad_side_margin"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <FrameLayout
            android:id="@+id/native_ad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>

